small fix for submenus styling on mobiles

--- a/type.less
+++ b/type.less
@@ -137,3 +137,7 @@ blockquote, #social blockquote {
 pre {
 	.block_text;
 }
+
+#masthead .main-small-navigation .menu ul {
+	list-style: none;
+}
